<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/logout"
        android:title="Logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        app:showAsAction="ifRoom"
        />

</menu>
